# blackops

./: .flake8  .flaskenv  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  blackops.excalidraw  clean.sh  docker-compose.yml  docker-entrypoint.sh  dump.rdb  newrelic.ini  pyproject.toml  pytest.ini  requirements.txt
.VSCodeCounter/2021-11-22_03-48-53/: details.md  results.md  results.txt
.github/workflows/: azure-scan.yml  wtf.yml
ARCH/: swagger-config.yaml  wtf.yml
blackops/: environment.py  logger.py  main.py
blackops/api/: app.py  auth.py  basics.py  handlers.py  is_unique.py  main.py  routers.py  stg.py  task_ctx.py
blackops/domain/: asset.py  exch.py  models.py  symbols.py
blackops/exchanges/: __init__.py  base.py  factory.py
blackops/pubsub/: client.py  pub.py  push.py
blackops/robots/: base.py  bridge.py  config.py  factory.py  follower.py  leader.py  orders.py  runner.py  sliding.py  stats.py  test_sliding.py  watchers.py
blackops/stgs/: push.py  sliding_window.py  sliding_window_with_bridge.py
blackops/strategies-old/: dummy.py  real.py  sliding_window.py
blackops/streams/: binance.py  bn.py  btcturk.py  factory.py  test_bt.py
blackops/taskq/: main.py  redis.py  task_ctx.py  taskq.py  tasks.py
blackops/trader/: bn.py  bt.py  factory.py  main.py  rest.py  sliding_window.py  sliding_window_with_bridge.py  stg.py  stg_bridge.py  strategy_factory.py  trader.py
blackops/util/: hash.py  logger.py  numbers.py  periodic.py  profiler.py  push.py  push_events.py  test_async_lock.py  timer.py  url.py  ws.py
docs/: blackops.excalidraw  buysell.excalidraw  ops.drawio  signal.excalidraw  window.excalidraw
exp/: agen.py  aiotask.py  dc.py  pub.py  sub.py
scripts/: autofix.sh  clean.sh  dmypy.sh  mypy.sh  setup-dev.sh
src/: environment.py  sentry.py
src/api/: auth.py  main.py
src/domain/: __init__.py  asset.py  models.py
src/exchanges/: base.py  factory.py  locks.py
src/flow/: __init__.py  api.py  runner.py
src/idgen/: __init__.py  hash.py
src/monitoring/: __init__.py  log.py  log_setup.py
src/numberops/: __init__.py  main.py  median.py  rolling.py  test_round.py
src/numbers/: __init__.py  main.py  test_round.py
src/periodic/: __init__.py  main.py  test.py
src/proc/: __init__.py  main.py
static/: .dmypy.json  index.html  logs.html
templates/: item.html
tests/: client.py  pubsub_exp.py  realtime.py  test_blackops.py  ws.py  wsc.py  wsexp.py
(+129 files in other folders)
