[tool.poetry]
name = "blackops"
version = "0.1.0"
description = ""
authors = ["selim"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
python-binance = "^1.0.15"
websocket-client = "^1.2.1"
aiostream = "^0.4.3"
Autologging = "^1.3.2"
btcturk-api = "^1.8.1"
Flask = "^2.0.2"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
