[tool.poetry]
name = "blackops"
version = "0.1.0"
description = ""
authors = ["selim"]

[tool.poetry.dependencies]
python = "^3.8.12"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
python-binance = "^1.0.15"
aiostream = "^0.4.3"
Autologging = "^1.3.2"
btcturk-api = "^1.8.1"
Flask = "^2.0.2"
websockets="^9.1"
fastapi = "^0.70.0"
beartype = "^0.9.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aioredis = "^2.0.0"
celery = "^5.2.1"
simplejson = "^3.17.6"
fastapi-websocket-pubsub = "^0.1.21"
flower = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.910"
autoflake = "^1.4"
autopep8 = "^1.6.0"
bandit = "^1.7.1"
coverage = "^6.1.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
