[tool.poetry]
name = "blackops"
version = "0.1.0"
description = ""
authors = ["selim"]

[tool.poetry.dependencies]
python = "^3.8.12"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
websockets="^9.1"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
redis = "^4.0.1"
aioredis = "^2.0.0"
pusher = "^3.1.0"
python-binance = "^1.0.15"
aiohttp = {version = "^3.8.1", extras = ["speedups"]}
simplejson = "^3.17.6"
async-timeout = "^4.0.2"
types-simplejson = "^3.17.2"
loguru = "^0.5.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.910"
autoflake = "^1.4"
autopep8 = "^1.6.0"
bandit = "^1.7.1"
coverage = "^6.1.2"
pre-commit = "^2.15.0"
pipreqs = "^0.4.11"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
